Fri May 15 06:54:19 2015  Aaron Patterson <tenderlove@ruby-lang.org>

	* variable.c: Change autoload to call `require` through Ruby rather
	  than directly calling `rb_require_safe`.  This allows things like
	  RubyGems to intercept file loading done though `autoload`.
	  [Feature #11140]

	* test/ruby/test_autoload.rb: Test for change.

Wed Apr  8 19:18:02 2015  Shota Fukumori (sora_h)  <her@sorah.jp>

	* enum.c (enum_grep_v, grep_i, grep_iter_i, Init_enum):
	  Implement Enumerable#grep_v. [Feature #11049]

Thu May 14 15:54:13 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/pathname/lib/pathname.rb: Remove condition of RUBY_VERSION <= 1.9.
	  [Feature #11082]

Wed May 13 17:10:37 2015  Masaki Matsushita <glass.saga@gmail.com>

	* enum.c (enum_to_a): revert r50457.
	  it requires recursion check.
	  then, it doesn't make performance improvement.
	  [Bug #11130] [Feature #9118]

Wed May 13 11:13:40 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parse_gvar): separate message for gvar without
	  non-space characters from message for invalid identifiers.

Tue May 12 22:18:27 2015  Masaki Matsushita <glass.saga@gmail.com>

	* enum.c (enum_to_a): fix incompatibility introduced in r50457.
	  [Bug #11130]

	* test/ruby/test_enum.rb: test for above.

Tue May 12 17:08:03 2015  Koichi Sasada  <ko1@atdot.net>

	* method.h: remove unused declaration.

Mon May 11 10:58:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* gems/bundled_gems: Update minitest-5.6.1 and power_assert-0.2.3.

Mon May 11 00:20:31 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (Data_Make_Struct, TypedData_Make_Struct):
	  allocate wrapper data object before allocating DATA_PTR to get
	  rid of possible memory leak when the former failed.

Sun May 10 21:32:45 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_mark_children): call dmark function for non-NULL
	  pointers only, so that DATA_PTR can be NULL safely now.
