@@ -1,3 +1,8 @@
+Fri May 15 08:24:28 2015  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>
+
+	* lib/cgi/cookie.rb: Implement HttpOnly flag for cookies.
+	  [fix GH-887] Patch by @martinpovolny
+
 Fri May 15 06:54:19 2015  Aaron Patterson <tenderlove@ruby-lang.org>
 
 	* variable.c: Change autoload to call `require` through Ruby rather
